# sips

./: .env.example  .gitignore  .pre-commit-config.yaml  DATABASE_MIGRATION_GUIDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: deploy.yml
app/: main.py
app/core/: config.py  data_types.py  database.py  exceptions.py  minio_client.py  params.py  responses.py  security.py
app/models/: __init__.py  adm_model.py  article_comment_model.py  article_model.py  article_rating_model.py  attachment_model.py  base.py  business_class_model.py  business_harvest_model.py  business_operational_status_model.py  business_product_model.py  business_service_model.py  businesses_model.py  commodity_model.py  economic_values_model.py  farmer_incomes_model.py  file_model.py  forestry_area.py  forestry_land_model.py  forestry_model.py  forestry_schema_model.py  foresty_schema_model.py  navigation_model.py  permit_model.py  piaps_records_model.py  proposal_forestry_model.py  proposal_forestry_status_model.py  proposal_foresty_status_model.py  refresh_token_model.py  regional_model.py  roles_model.py  settings_model.py  stat_ig_model.py  user_model.py
app/repositories/: __init__.py  article_comment_repository.py  article_rating_repository.py  article_repository.py  attachment_repository.py  base.py  business_harvest_repository.py  business_product_repository.py  business_service_repository.py  businesses_repository.py  commodity_repository.py  economic_values_repository.py  farmer_incomes_repository.py  file_repository.py  forestry_area_repository.py  forestry_land_repository.py  (+16 more)
migrations/: env.py  forestry_area.sql  pre_test.py  role_users.sql  scripts.py
tests/: README.md  conftest.py  requirements-test.txt  run_tests.py
(+118 files in other folders)
